# pizza-stemmers

./: .gitignore  Cargo.toml  README.md
src/: algorithms.rs  lib.rs
src/algorithms/: polish_yarovoy.rs
src/snowball/: among.rs  env.rs  mod.rs
src/snowball/algorithms/: arabic.rs  armenian_mkrtchyan.rs  basque.rs  catalan.rs  czech_dolamic_aggressive.rs  czech_dolamic_light.rs  danish.rs  dutch.rs  english_lovins.rs  english_porter.rs  english_porter_2.rs  estonian_freienthal.rs  finnish.rs  french.rs  german.rs  greek.rs  hindi_lightweight.rs  hungarian.rs  indonesian_tala.rs  irish_gaelic.rs  italian.rs  lithuanian_jocas.rs  mod.rs  nepali.rs  norwegian_bokmal.rs  portuguese.rs  romanian.rs  romanian_heidelberg.rs  romanian_tirdea.rs  russian.rs  spanish.rs  swedish.rs  turkish_cilden.rs  yiddish_urieli.rs
tests/: czech_test.rs  english_test.rs  german_test.rs  spanish_test.rs  stemmer_test.rs
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs
