[package]
name = "pizza-stemmers"
version = "0.1.0"
edition = "2021"
keywords = ["pizza","search", "tokenizer", "stemmer", "snowball"]
categories = ["text-processing"]
license = "BSD-3-Clause"
license-file = "LICENSE"
authors = ["Testuj.to s.r.o. <technology@testuj.to>", "Patrik Šimunič"]
description = "A collection of Tantivy stemmer tokenizers"
repository = "https://github.com/infinilabs/pizza-stemmers"

[features]
default = [
    "english_porter",
    "english_porter_2",
    "french",
    "czech_dolamic_aggressive",
    "german",
    "spanish",
    "russian",
    "arabic",
    "armenian_mkrtchyan",
    "basque",
    "catalan",
    "czech_dolamic_light",
    "danish",
    "dutch",
    "english_lovins",
    "estonian_freienthal",
    "finnish",
    "greek",
    "hindi_lightweight",
    "hungarian",
    "indonesian_tala",
    "irish_gaelic",
    "italian",
    "lithuanian_jocas",
    "nepali",
    "norwegian_bokmal",
    "polish_yarovoy",
    "polish_yarovoy_unaccented",
    "portuguese",
    "romanian",
    "romanian_heidelberg",
    "romanian_tirdea",
    "swedish",
    "turkish_cilden",
    "yiddish_urieli"
]
arabic = []
armenian_mkrtchyan = []
basque = []
catalan = []
czech_dolamic_aggressive = []
czech_dolamic_light = []
danish = []
dutch = []
english_lovins = []
english_porter = []
english_porter_2 = []
estonian_freienthal = []
finnish = []
french = []
german = []
greek = []
hindi_lightweight = []
hungarian = []
indonesian_tala = []
irish_gaelic = []
italian = []
lithuanian_jocas = []
nepali = []
norwegian_bokmal = []
polish_yarovoy = []
polish_yarovoy_unaccented = []
portuguese = []
romanian = []
romanian_heidelberg = []
romanian_tirdea = []
russian = []
spanish = []
swedish = []
turkish_cilden = []
yiddish_urieli = []


[workspace]

[dependencies]
pizza-common = { path = "../../lib/common" }
pizza-engine = { path = "../../lib/engine" }
aho-corasick = "1.1.3"
precis-core = "0.1.9"
precis-profiles = "0.1.10"
serde = "1.0.199"
serde_derive = "1.0.199"
unicode-normalization = "0.1.23"

[dev-dependencies]
test_utils = { path = "./tests/utils" }
